--- a/404.md
+++ b/404.md
@@ -1,4 +1,4 @@
-# 404 Not Found
+# 404 Not Found <!-- {docsify-ignore-all} -->
 ### 诶？页面不见了？快检查一下你的链接拼写是否有误！
 ### 首页域名：dicomi.dpdns.org/#/
 ### 此网站的其他所以子域名都应该在这个域名下，如：dicomi.dpdns.org/#/docs/download
